[CDAP-15120] fix overflow scroll on node configuration modal

--- a/cdap-ui/app/hydrator/hydrator-modal.less
+++ b/cdap-ui/app/hydrator/hydrator-modal.less
@@ -168,9 +168,9 @@
       &.expand {
         margin-left: 0;
         width: 100%;
-        height: ~"calc(100vh - 90px)";
-        height: ~"-moz-calc(100vh - 90px)";
-        height: ~"-webkit-calc(100vh - 90px)";
+        height: ~"calc(100vh - 100px)";
+        height: ~"-moz-calc(100vh - 100px)";
+        height: ~"-webkit-calc(100vh - 100px)";
         margin-bottom: 0;
       }
 
@@ -207,9 +207,9 @@
               .bottompanel-body {
                 padding: 0 10px 10px 10px;
                 overflow-y: auto;
-                height: ~"calc(100vh - 220px)";
-                height: ~"-moz-calc(100vh - 220px)";
-                height: ~"-webkit-calc(100vh - 220px)";
+                height: ~"calc(100vh - 240px)";
+                height: ~"-moz-calc(100vh - 240px)";
+                height: ~"-webkit-calc(100vh - 240px)";
                 .reference-tab { padding: 0 10px; }
 
                 .btn-hydrator {
@@ -234,9 +234,9 @@
                   div.config-table {
                     display: table;
                     width: 100%;
-                    height: ~"calc(100vh - 220px)";
-                    height: ~"-moz-calc(100vh - 220px)";
-                    height: ~"-webkit-calc(100vh - 220px)";
+                    height: ~"calc(100vh - 240px)";
+                    height: ~"-moz-calc(100vh - 240px)";
+                    height: ~"-webkit-calc(100vh - 240px)";
 
                     > div {
                       display: table-cell;
@@ -394,26 +394,26 @@ body.theme-cdap {
     .modal.hydrator-modal {
       &.node-config-modal {
         .modal-dialog {
-          margin-top: 120px;
+          margin-top: 100px;
           &.expand {
             margin-bottom: 0;
-            height: ~"calc(100vh - 120px)";
-            height: ~"-moz-calc(100vh - 120px)";
-            height: ~"-webkit-calc(100vh - 120px)";
+            height: ~"calc(100vh - 100px)";
+            height: ~"-moz-calc(100vh - 100px)";
+            height: ~"-webkit-calc(100vh - 100px)";
           }
           .modal-content {
             .modal-body {
               .console-type {
                 .node-config {
                   .bottompanel-body {
-                    height: ~"calc(100vh - 250px)";
-                    height: ~"-moz-calc(100vh - 250px)";
-                    height: ~"-webkit-calc(100vh - 250px)";
+                    height: ~"calc(100vh - 240px)";
+                    height: ~"-moz-calc(100vh - 240px)";
+                    height: ~"-webkit-calc(100vh - 240px)";
                   }
                   div.config-table {
-                    height: ~"calc(100vh - 250px)";
-                    height: ~"-moz-calc(100vh - 250px)";
-                    height: ~"-webkit-calc(100vh - 250px)";
+                    height: ~"calc(100vh - 240px)";
+                    height: ~"-moz-calc(100vh - 240px)";
+                    height: ~"-webkit-calc(100vh - 240px)";
                   }
                 }
               }
